@@ -1,3 +1,8 @@
+* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.3.0-0
+- Drop Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.1-0
 - Update the upper bound of stdlib to < 6.0.0
 - Update a URL in the README.md
@@ -13,7 +18,7 @@
 
 * Wed May 09 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.1.1
 - Update to puppetlabs/docker 1.1.0
-  - $selinux_enabled changed from taking string to only taking booleans, 
+  - $selinux_enabled changed from taking string to only taking booleans,
     breaking the hiera interpolation trick that was used to set that parameter
     to the selinux status of the system.
 
